basic styling and z-index fix

--- a/devcon/src/components/domain/discounts/tickets.module.scss
+++ b/devcon/src/components/domain/discounts/tickets.module.scss
@@ -19,8 +19,9 @@
   right: 0px;
   top: 0px;
   bottom: 0px;
-  
-  &:before, &:after {
+
+  &:before,
+  &:after {
     content: '';
     position: absolute;
     left: -19px;
